#pragma once

#include "../Command.h"

class CopyCommand : public Command {
public : 
    virtual ~CopyCommand();
};
