#pragma once

#include "../Command.h"

class CutCommand : public Command {
public : 
    virtual ~CutCommand();
};